# ASMA

./: .gitignore  Cargo.toml  LICENSE  README.md  setup.cfg  setup.py
plots/exploration/: finite_size_fluct.py  interspike_corr.py  rust.py  second_order.py  test.py  test_and_compare_methods.py
plots/final/: A_inf.py  activity.py  delta_0.py  kernel.py  m_t_distr.py  m_t_distr2.py  plot_activities.py  plot_adaptation.py  plot_adaptation_Ainf.py  plot_adaptation_detailed.py  plot_bursting.py  plot_bursting_Ainf.py  plot_bursting_detailed.py  plot_bursting_kernel.py  plot_delta_0.py  plot_m_t_distr.py
plots/midterm/: A_inf.py  FR_illustration.py  activity.py  bursting_kernel.py  bursting_test_plots.py  bursting_to_cache.py  leaky_mem_illustration.py  particle_animated.py  rho_vs_particle_anim.py
plots/presentation/: age_animation.py  leaky_mem_ill.py  m_distribution.py  plot_age_animation.py  plot_leaky_mem_ill.py  plot_m_distribution.py
src/: lib.rs
src/flowrect/: cli.py  tests.py
src/flowrect/simulations/: QR.py  __init__.py  interspike_int_corr.py  util.py
src/flowrect/simulations/particle/: individual.py  population.py
src/flowrect/simulations/pdes/: ASA1.py  FR.py  QR.py  finite_pde.py  second_order.py
src/flowrect/widget/: widgets.py
src/markov_embedding/core/: simulation.py
src/markov_embedding/widget/: cli.py  util.py  widgets.py
