# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = flowrect
author = Joachim Koerfer
# description = 
license = MIT
license_files = LICENSE
long-description = file: README.md
long-description-content-type = text/x-rst; charset=UTF-8
project_urls =
    Source Code = https://github.com/jokteur/epfl-master-project.git

version = 0.0.1

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.6
install_requires =
    black>=19.3b0
    numpy
    matplotlib
    bokeh>=2.3.0
    scikit-image
    holoviews[recommended]
    panel
    numba

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    markov-embedding-widget = flowrect.cli:widget

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
norecursedirs =
    dist
    build
    .tox
testpaths = tests

# [build_sphinx]
# source_dir = docs
# build_dir = build/sphinx
# warning-is-error = True

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length = 100
exclude =
    .tox
    build
    dist
    .eggs